--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 html {
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   line-height: 1.15;
-  background-color: var(--background-site);
   font-size: 62.5%;
-  font-family: Inter, 'system-ui', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol';
+  font-family: "Poppins", sans-serif;
+  overflow-x: hidden; 
 }
+[data-scroll-container] {
+  overflow: hidden; /* Hide native scrollbars */
+}
+
 *,
 *::before,
 *::after {
