--- a/app/globals.css
+++ b/app/globals.css
@@ -142,3 +142,11 @@ body {
   height: var(--slide-height);
   user-select: none;
 }
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Edge */
+}
